--- a/MyResume-1.0.0/index.html
+++ b/MyResume-1.0.0/index.html
@@ -59,7 +59,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets\img\background.jpg" alt="">
+      <img src="assets\img\background2.jpg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
@@ -87,9 +87,6 @@
         </div>
       </div>
 
-      <div class = "pic">
-        <img src="assets\img\justin2.png"  alt="pic">
-      </div>
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
